New endpoints, users with roles